--- a/all-pages.html
+++ b/all-pages.html
@@ -47,7 +47,7 @@
 	</a>
 	<!--btn menu end-->
 	<!--slogan-->
-	<div class="logo__slogan"><span>Children's learning "Azbook"</span></div>
+	<div class="logo__slogan"><span>Playing to get smart</span></div>
 	<!--slogan end-->
 </header>
 <!--HEADER end-->
@@ -58,9 +58,13 @@
 		<div class="sidebar__frame">
 			<!--logo-->
 			<div class="logo">
-				<a href="index.html"> <strong class="logo__img">AZToys</strong> <em class="logo__slogan">Children's learning "Azbook"</em> </a>
+				<a href="index.html">
+					<strong class="logo__img">AZToys</strong>
+					<div class="logo__slogan"><span>Playing to get smart</span></div>
+				</a>
 			</div>
-			<!--logo end-->			<!-- main navigation -->
+			<!--logo end-->
+			<!-- main navigation -->
 			<nav class="nav">
 				<ul class="nav-list">
 					<li><a href="index.html"><span>Home</span></a></li>
@@ -75,13 +79,13 @@
 										<li><a href="#" data-filter=".tag-music"><span>Sound and Music Toys</span></a></li>
 										<li><a href="#" data-filter=".tag-art"><span>Art and Craft Kits</span></a></li>
 										<li><a href="#" data-filter=".tag-tablet"><span>Toy Tablets</span></a></li>
-										<li><a href="#" data-filter=".tag-touch"><span>Tablets with Touch Screen</span></a></li>
+										<li><a href="#" data-filter=".tag-touch"><span>Tablets with Touch Screen Pages</span></a></li>
 										<li><a href="#" data-filter=".tag-smartphone"><span>Toy Smartphones</span></a></li>
 										<li><a href="#" data-filter=".tag-smart-watch"><span>Smart Watches</span></a></li>
 										<li><a href="#" data-filter=".tag-microphone"><span>Microphones</span></a></li>
 										<li><a href="#" data-filter=".tag-console"><span>Consoles</span></a></li>
 										<li><a href="#" data-filter=".tag-sound-mat"><span>Sound Mats</span></a></li>
-										<li><a href="#" data-filter=".tag-set"><span>Sound Models and Sets</span></a></li>
+										<li><a href="#" data-filter=".tag-set"><span>Sound Construction Models and Sets</span></a></li>
 										<li><a href="#" data-filter=".tag-educational-card"><span>Educational Cards</span></a></li>
 										<li><a href="#" data-filter=".tag-puzzle"><span>Puzzle Elements</span></a></li>
 										<li><a href="#" data-filter=".tag-sticker"><span>Sticker Elements</span></a></li>
@@ -131,10 +135,10 @@
 			<div class="sidebar-footer">
 				<div class="sidebar-footer__holder">
 					<!--slogan-->
-					<div class="slogan"><span>This is more than just an interactive books.</span></div>
+					<div class="slogan"><span>Interactive toys inspiring fun learning</span></div>
 					<!--slogan end-->
 					<!--phone-->
-					<div class="phone"><a href="tel:+375 29 135-35-55">+375 29 135-35-55</a></div>
+					<div class="phone"><a href="mailto:info@az-toys.com">info@az-toys.com</a></div>
 					<!--phone end-->
 					<!--social networks-->
 					<ul class="social-networks">
