--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <!--screen-->
 <div class="color-tape-horizontal"></div>
-<div class="screen" id="main-screen-animate">
+<div class="screen">
 	<div class="screen__bg"></div>
 	<strong class="screen__logo">AZToys</strong>
 	<strong class="screen__title">Interactive toys inspiring fun learning!</strong>
