--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 									<ul class="nav-drop__list">
 										<li><a href="#" class="button" data-filter=".tag-younger">2-3 years</a></li>
 										<li><a href="#" class="button" data-filter=".tag-middle">4-5 years</a></li>
-										<li><a href="#" class="button" data-filter=".tag-senior">4-5 years</a></li>
+										<li><a href="#" class="button" data-filter=".tag-senior">6+ years</a></li>
 									</ul>
 								</div>
 							</div>
@@ -209,9 +209,9 @@
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 									<dl class="products__param">
-										<dt>Category:</dt> <dd>Learn</dd>
-										<dt>Skills:</dt> <dd>Memory</dd>
-										<dt>Age:</dt> <dd>5-7 years</dd>
+										<dt>Category:</dt> <dd>Educational Toys, Sound and Music Toys, Tablets with Touch Screen Pages</dd>
+										<dt>Skills:</dt> <dd>Cognitive skills, Hand-eye coordination, Sensory abilities, Reading skills</dd>
+										<dt>Age:</dt> <dd>2-3, 4-5, 6+</dd>
 									</dl>
 								</div>
 							</a>
@@ -235,9 +235,9 @@
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird for education</h3>
 									<dl class="products__param">
-										<dt>Category:</dt> <dd>Learn</dd>
-										<dt>Skills:</dt> <dd>Memory</dd>
-										<dt>Age:</dt> <dd>5-7 years</dd>
+										<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
+										<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
+										<dt>Age:</dt> <dd>2-3, 4-5</dd>
 									</dl>
 								</div>
 							</a>
