--- a/products.html
+++ b/products.html
@@ -116,7 +116,7 @@
 									<ul class="nav-drop__list">
 										<li><a href="#" class="button" data-filter=".tag-younger">2-3 years</a></li>
 										<li><a href="#" class="button" data-filter=".tag-middle">4-5 years</a></li>
-										<li><a href="#" class="button" data-filter=".tag-senior">4-5 years</a></li>
+										<li><a href="#" class="button" data-filter=".tag-senior">6+ years</a></li>
 									</ul>
 								</div>
 							</div>
@@ -286,9 +286,9 @@
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
+								<dt>Category:</dt> <dd>Educational Toys, Sound and Music Toys, Tablets with Touch Screen Pages</dd>
+								<dt>Skills:</dt> <dd>Cognitive skills, Hand-eye coordination, Sensory abilities, Reading skills</dd>
+								<dt>Age:</dt> <dd>2-3, 4-5, 6+</dd>
 							</dl>
 						</div>
 					</a>
@@ -312,9 +312,9 @@
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird for education</h3>
 							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
+								<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
+								<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
+								<dt>Age:</dt> <dd>2-3, 4-5</dd>
 							</dl>
 						</div>
 					</a>
@@ -351,9 +351,9 @@
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
+								<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
+								<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
+								<dt>Age:</dt> <dd>2-3, 4-5</dd>
 							</dl>
 						</div>
 					</a>
@@ -364,9 +364,9 @@
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
+								<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
+								<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
+								<dt>Age:</dt> <dd>2-3, 4-5</dd>
 							</dl>
 						</div>
 					</a>
@@ -390,9 +390,9 @@
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird for education</h3>
 							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
+								<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
+								<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
+								<dt>Age:</dt> <dd>2-3, 4-5</dd>
 							</dl>
 						</div>
 					</a>
@@ -416,9 +416,9 @@
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
+								<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
+								<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
+								<dt>Age:</dt> <dd>2-3, 4-5</dd>
 							</dl>
 						</div>
 					</a>
@@ -442,9 +442,9 @@
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
+								<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
+								<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
+								<dt>Age:</dt> <dd>2-3, 4-5</dd>
 							</dl>
 						</div>
 					</a>
@@ -481,9 +481,9 @@
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
+								<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
+								<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
+								<dt>Age:</dt> <dd>2-3, 4-5</dd>
 							</dl>
 						</div>
 					</a>
@@ -507,9 +507,9 @@
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
-								<dt>Category:</dt> <dd>Learn</dd>
-								<dt>Skills:</dt> <dd>Memory</dd>
-								<dt>Age:</dt> <dd>5-7 years</dd>
+								<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
+								<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
+								<dt>Age:</dt> <dd>2-3, 4-5</dd>
 							</dl>
 						</div>
 					</a>
@@ -602,7 +602,7 @@
 			<div class="max-wrap">
 				<!--product card-->
 				<div class="product-card">
-					<strong class="product-card__title">KIDS PAD – Fun on the Farm</strong>
+					<strong class="product-card__title">KIDS’ PAD - Fun on the Farm</strong>
 					<div class="product-card__visual">
 						<div class="product-card__gallery">
 							<img src="img/img-products-lg-01.jpg">
@@ -612,45 +612,63 @@
 					</div>
 					<div class="product-card__content">
 						<div class="product-card__widget">
-							<strong class="product-card__subtitle">Specifications:</strong>
-							<div class="product-card__description text-slide-js">Welcome to a noisy farm! The merry farmer has so many different animals: a fluffy dog and a colourful rooster, a fast horse and a cute pig. It is so great to press the pictures with animals</div>
+							<div class="product-card__description text-slide-js">Welcome to a noisy farm! The cheerful farmer has so many different animals: a fluffy dog and a colourful rooster, a fast horse and a cute pig. It is so great to press the pictures with animals and listen to their voices! Pressing the mode buttons the little ones will listen to curious facts and play fun games. Listen to a merry tune and add animal voices to the mix! Это будет текстовое поле 1, отдельное заполняется для каждой игрушки ОК</div>
 						</div>
 						<div class="product-card__widget">
+							<strong class="product-card__subtitle">Information:</strong>
+							<ul class="skills-list">
+								<li><span>10 animal voices</span></li>
+								<li><span>10 curious facts</span></li>
+								<li><span>20 fun questions</span></li>
+								<li><span>Amusing tune: the animals sing along!</span></li>
+							</ul>
+						</div>
+						<div class="product-card__widget">
+							<strong class="product-card__subtitle">Categories:</strong>
 							<dl class="product-card__dl">
-								<dt>Series:</dt>
-								<dd>Kids pad</dd>
-								<dt>Name:</dt>
-								<dd>Fun on the farm</dd>
-								<dt>Age:</dt>
-								<dd>2-3, 4-5</dd>
 								<dt>Category:</dt>
 								<dd>
 									<ul>
-										<li>Educational toy</li>
-										<li>Toy tablet</li>
-										<li>Entertaining musical toy</li>
+										<li>Educational Toy</li>
+										<li>Toy Table</li>
+										<li>Entertaining Musical Toy</li>
+									</ul>
+								</dd>
+								<dt>Age:</dt>
+								<dd>
+									<ul>
+										<li>2-3</li>
+										<li>4-5</li>
 									</ul>
 								</dd>
 							</dl>
 						</div>
 						<div class="product-card__widget">
-							<strong class="product-card__subtitle">Product specifications:</strong>
+							<strong class="product-card__subtitle">Product Specifications:</strong>
 							<dl class="product-card__dl">
-								<dt>Dimensions:</dt>
-								<dd>3,5 x 32 x 23 cm</dd>
+								<dt><b>Series:</b></dt>
+								<dd>KIDS’ PAD</dd>
+								<dt><b>Name:</b></dt>
+								<dd>Fun on the Farm</dd>
+								<dt>Item number:</dt>
+								<dd>INT-HX-015</dd>
+								<dt>Toy Dimensions:</dt>
+								<dd>241*185 mm</dd>
+								<dt>Package Dimensions:</dt>
+								<dd>35 x 320 x 232 mm</dd>
 								<dt>Language:</dt>
 								<dd>English</dd>
-								<dt>What Inside:</dt>
+								<dt>What’s Inside:</dt>
 								<dd>toy tablet, A3 batteries * 2 pcs</dd>
 							</dl>
 						</div>
 						<div class="product-card__widget">
 							<strong class="product-card__subtitle">Skills:</strong>
 							<ul class="skills-list">
-								<li><i class="depict-skills-02"></i><span>Cognitive skills</span></li>
-								<li><i class="depict-skills-14"></i><span>Logical thinking skills</span></li>
-								<li><i class="depict-skills-09"></i><span>Musical ability</span></li>
-								<li><i class="depict-skills-13"></i><span>Visual memory develop.</span></li>
+								<li><i class="depict-skills-02"></i><span>Cognitive Skills</span></li>
+								<li><i class="depict-skills-14"></i><span>Visual Memory Development</span></li>
+								<li><i class="depict-skills-09"></i><span>Logical Thinking Skills</span></li>
+								<li><i class="depict-skills-13"></i><span>Musical Ability</span></li>
 							</ul>
 						</div>
 					</div>
