--- a/news.html
+++ b/news.html
@@ -116,7 +116,7 @@
 									<ul class="nav-drop__list">
 										<li><a href="#" class="button" data-filter=".tag-younger">2-3 years</a></li>
 										<li><a href="#" class="button" data-filter=".tag-middle">4-5 years</a></li>
-										<li><a href="#" class="button" data-filter=".tag-senior">4-5 years</a></li>
+										<li><a href="#" class="button" data-filter=".tag-senior">6+ years</a></li>
 									</ul>
 								</div>
 							</div>
