--- a/products.html
+++ b/products.html
@@ -676,8 +676,8 @@
 			</div>
 		</div>
 	</div>
-	<a href="#" class="btn-close">Close</a>
 </div>
+<a href="#" class="btn-close btn-close-popup">Close</a>
 <!--popup end-->
 
 <!--JQuery library-->
