--- a/products.html
+++ b/products.html
@@ -604,7 +604,7 @@
 				<div class="product-card">
 					<strong class="product-card__title">KIDS’ PAD - Fun on the Farm</strong>
 					<div class="product-card__visual">
-						<div class="product-card__gallery">
+						<div class="product-card__gallery gallery-js">
 							<img src="img/img-products-lg-01.jpg">
 							<img src="img/img-products-lg-02.jpg">
 							<img src="img/img-products-lg-03.jpg">
