--- a/contacts.html
+++ b/contacts.html
@@ -237,6 +237,34 @@
 							</div>
 						</div>
 						<!--locate end-->
+						<div class="contacts-print">
+							<h3>USA & Canada</h3>
+							<div class="locate-adr__item">
+								9330 LBJ Freeway, Suite 900 <br>
+								Dallas, TX 75243 <br>
+								PO Box 647, LIghtfoot, VA 23090
+							</div>
+							<dl class="locate-cont__item">
+								<dt class="locate__tel">Tel.:</dt>
+								<dd><a href="tel:2145613922">(214) 561-3922</a></dd>
+								<dt>E-mail:</dt>
+								<dd><a href="mailto:info@aztoys.com">info@aztoys.com</a></dd>
+							</dl>
+							<img src="img/img-map-for-print-01.jpg" alt="image description" />
+							<br><br>
+							<h3>Europe</h3>
+							<div class="locate-adr__item">
+								Toompuiestee 35, korrus 2, <br>
+								Tallinn 10133, Estonia
+							</div>
+							<dl class="locate-cont__item">
+								<dt class="locate__tel">Tel.:</dt>
+								<dd><a href="tel:003725183088">003725183088</a></dd>
+								<dt>E-mail:</dt>
+								<dd><a href="mailto:info@aztoys.com">info@aztoys.com</a></dd>
+							</dl>
+							<img src="img/img-map-for-print-01.jpg" alt="image description" />
+						</div>
 					</div>
 				</div>
 				<!--contacts form-->
