--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="buttons"><a href="#" class="btn-default">See collection</a></div>
+			<div class="buttons"><a href="#" class="btn-default">All products</a></div>
 			<!--video section-->
 			<section class="video-section">
 				<h2>Watch our video</h2>
