--- a/contacts.html
+++ b/contacts.html
@@ -20,11 +20,19 @@
 	<!--Modernizr-->
 	<script src="js/vendor/modernizr-3.3.1.custom.min.js"></script>
 </head>
-<body>
-<!--[if lte IE 8]>
-<style>body *{display:none;} body .browserupgrade{display:block;}body .browserupgrade *{display:inline;}</style>
+<body class="preloader-show">
+<!--[if lt IE 9]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
+
+<!--preloader-->
+<div id="pagePreloader" class="page-preloader">
+	<div class="prl-cont">
+		<div class="prl-icon"></div>
+		<div class="prl-logo"></div>
+	</div>
+</div>
+<!--preloader end-->
 
 <!--HEADER-->
 <header class="header">
