--- a/typography.html
+++ b/typography.html
@@ -20,10 +20,19 @@
 	<!--Modernizr-->
 	<script src="js/vendor/modernizr-3.3.1.custom.min.js"></script>
 </head>
-<body class="text-page">
+<body class="text-page preloader-show">
 <!--[if lt IE 9]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
+
+<!--preloader-->
+<div id="pagePreloader" class="page-preloader">
+	<div class="prl-cont">
+		<div class="prl-icon"></div>
+		<div class="prl-logo"></div>
+	</div>
+</div>
+<!--preloader end-->
 
 <!--HEADER-->
 <header class="header">
