--- a/typography.html
+++ b/typography.html
@@ -20,7 +20,7 @@
 	<!--Modernizr-->
 	<script src="js/vendor/modernizr-3.3.1.custom.min.js"></script>
 </head>
-<body class="text-page preloader-show">
+<body class="preloader-show">
 <!--[if lt IE 9]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -193,7 +193,7 @@
 	<!--MAIN-->
 	<div class="main">
 		<!--CONTENT-->
-		<div class="content user-content layout">
+		<div class="content user-content text-page layout">
 			<div class="max-wrap bg-content">
 				<div class="btn-view-print">
 					<a href="#" class="view-print" style="">
