--- a/news.html
+++ b/news.html
@@ -29,7 +29,9 @@
 <div id="pagePreloader" class="page-preloader">
 	<div class="prl-cont">
 		<div class="prl-icon"></div>
-		<div class="prl-logo"></div>
+		<div class="prl-logo">
+			<span class="prl-text">Loading...</span>
+		</div>
 	</div>
 </div>
 <!--preloader end-->
